test/tests/errors/error-while.sm
// true
// false
/**/
/**/

program {
    var x = true;
    while (x) {
        x = 4;
    }
}